# movie-database-with-c

./: .gitignore  .replit  CMakeLists.txt  Doxyfile  README.md  buildNRun.sh  projectConfigure.sh
Tasks/: Console.c  Console.cpp  Console.h  LinkedList.c  Main.c  MovieDatabase.c  MovieDatabaseApp.c  MovieDatabaseApp.h  Task1.c  Task2.c  Test.c
Tests/: Test_LinkedList.cpp  Test_Queue.cpp  Test_Stack.cpp
Tests/Report/: Test Results - Test_LinkedList.html  Test Results - Test_Queue.html  Test Results - Test_Stack.html
doc/html/: _build_n_run_8md.html  _c_make.html  annotated.html  annotated_dup.js  classes.html  dir_000004_000002.html  dir_000005_000002.html  dir_4dbf451e34c350b12405d9e12ceabc3d.html  dir_4dbf451e34c350b12405d9e12ceabc3d.js  dir_4dbf451e34c350b12405d9e12ceabc3d_dep.dot  dir_4dbf451e34c350b12405d9e12ceabc3d_dep.map  dir_4dbf451e34c350b12405d9e12ceabc3d_dep.md5  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_5a30104352ef4255dc24354b02eb2d20.js  dir_5a30104352ef4255dc24354b02eb2d20_dep.dot  dir_5a30104352ef4255dc24354b02eb2d20_dep.map  dir_5a30104352ef4255dc24354b02eb2d20_dep.md5  dir_69c0ad47d15d71cfac8e0d206e4e350d.html  dir_91f3eb4cb3b736e23146b9b397016ddd.html  dir_91f3eb4cb3b736e23146b9b397016ddd.js  dir_91f3eb4cb3b736e23146b9b397016ddd_dep.dot  dir_91f3eb4cb3b736e23146b9b397016ddd_dep.map  dir_91f3eb4cb3b736e23146b9b397016ddd_dep.md5  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.dot  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.map  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.md5  dir_a065c5f60305fee3569f887679366939.html  dir_a065c5f60305fee3569f887679366939.js  dir_a065c5f60305fee3569f887679366939_dep.dot  dir_a065c5f60305fee3569f887679366939_dep.map  dir_a065c5f60305fee3569f887679366939_dep.md5  exception_8c.html  exception_8c.js  exception_8c__incl.dot  exception_8c__incl.map  exception_8c__incl.md5  exception_8c_source.html  exception_8h.html  exception_8h.js  (+107 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+15 more)
doc_pages/: BuildNRun.md  mainpage.md
extras/: doxygenDark.css
lib/include/: database.h  exception.h  input.h  movie.h  utility.h
lib/include/DataStruct/: node.h  queue.h  stack.h
lib/include/Database/: database.h  queryParser.h
lib/src/: database.c  exception.c  input.c  movie.c  utility.c
lib/src/DataStruct/: node.c  queue.c  stack.c
lib/src/Database/: database.c  queryParser.c
resources/: databasesampleQuery.db
resources/database/: Harry Potter Franchise.db  Movie Database.db  onlyRadCliffe.db  sampleQuery.db
